# VideoEncoder

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  cmd_suffix.sh  main.cpp  string_concat.h
